crates/toml/tests/snapshots/invalid/key/end-in-escape.stderr
TOML parse error at line 1, column 29
  |
1 | "backslash is the last char\
  |                             ^
key with no value, expected `=`

---
TOML parse error at line 1, column 29
  |
1 | "backslash is the last char\
  |                             ^
invalid basic string, expected `"`

---
TOML parse error at line 1, column 29
  |
1 | "backslash is the last char\
  |                             ^
missing escaped value, expected `b`, `f`, `n`, `r`, `\`, `"`, `u`, `U`
